--- a/dots/.config/sway/config
+++ b/dots/.config/sway/config
@@ -6,7 +6,9 @@ set $mod4 Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # font pango:IBM Plex Mono 10
-font pango:Victor Mono 9
+# font pango:Geist Mono 9
+# font pango: Mx437HP100LX6x8 8
+font pango: Ubuntu Mono 12
 
 # default_border pixel 2
 #hide_edge_borders vertical
@@ -23,8 +25,9 @@ default_floating_border pixel 2
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment sway
-bindsym $mod+c exec makoctl dismiss
+exec --no-startup-id /usr/lib/xdg-desktop-portal -r
 exec_always mako
+bindsym $mod+c exec makoctl dismiss
 # exec_always wlsunset -l 14.5 -L 120.9
 # exec_always fcitx5
 
@@ -65,11 +68,16 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec alacritty
-bindsym $mod+Shift+T exec wezterm
-bindsym $mod4+Return exec emacs
+bindsym $mod+Return exec foot
+# bindsym $mod+Shift+T exec wezterm
+bindsym $mod+Shift+T exec kitty
+bindsym $mod4+T exec ray-timer
+bindsym $mod4+A exec alacritty
+bindsym $mod4+Z exec zathura
+bindsym $mod4+Shift+Z exec okular
+# bindsym $mod4+Return exec emacs
 # bindsym $mod+Shift+T exec kitty
-bindsym $mod4+n exec neovide
+# bindsym $mod4+n exec neovide
 bindsym $mod+n workspace next
 bindsym $mod+Shift+b workspace prev
 for_window [title="\ -\ Sharing\ Indicator$"] floating enable, sticky enable
@@ -82,6 +90,7 @@ for_window [class="raylib"] floating enable
 for_window [title="ray-timer"] floating enable 
 for_window [title="Bevy App"] floating enable 
 for_window [title="Floating Window"] floating enable 
+for_window [title="tk"] floating enable 
 for_window [title="\ -\ Sharing\ Indicator$"] floating enable, sticky enable
 # for_window [title="\ -\(DEBUG)"] floating enable 
 # for_window [title="Godot"] floating enable 
@@ -94,10 +103,12 @@ for_window [title="Blender Render"] floating enable
 for_window [title="Meeting Chat" instance="zoom"] floating enable
 for_window [class="sdl" instance="sdl"] floating enable
 for_window [class="Sxiv"] floating enable
-for_window [class="Nautilus"] floating enable
-for_window [class="Nemo"] floating enable
+for_window [class="nautilus"] floating enable
+for_window [class="Home"] floating enable
 for_window [class="Zoom Meeting"] floating enable
+for_window [title="foot"] floating enable
 bindsym $mod+r sticky toggle
+bindsym $mod4+b bar mode toggle
 
 # kill focused window
 bindsym $mod+Shift+w kill
@@ -105,10 +116,18 @@ bindsym $mod+Shift+w kill
 # start dmenu (a program launcher)
 # bindsym $mod+Shift+d exec --no-startup-id "bemenu-run"
 # bindsym $mod+Shift+d exec --no-startup-id "wofi --show drun"
-bindsym $mod+Shift+d exec --no-startup-id "dmenu_run"
+# bindsym $mod+Shift+d exec --no-startup-id "dmenu_run" -nb '#1e1e1e' -sf '#1e1e1e' -sb '#f4800d' -nf '#f4800d'
+# Grey dmenu
+# bindsym $mod+Shift+d exec --no-startup-id "dmenu_run" -nb '#1e1e1e' -sf '#1e1e1e' -sb '#cccccc' -nf '#cccccc'
+bindsym $mod+Shift+d exec --no-startup-id "dmenu_run" -nb '#ffee8c' -sf '#1e1e1e' -sb '#6c782e' -nf '#6c782e'
 bindsym $mod4+0 exec --no-startup-id "flatpak run md.obsidian.Obsidian"
+bindsym $mod4+f exec --no-startup-id "nemo"
+bindsym $mod4+n exec --no-startup-id "nautilun"
 # bindsym $mod4+9 exec --no-startup-id "~/projects/bash/wallpaper.sh"
 bindsym $mod4+9 exec --no-startup-id "~/projects/bash/sway/random_wallpaper.sh"
+bindsym $mod4+d exec --no-startup-id "foot -- yazi Documents/"
+
+
 # A more modern dmenu replacement is rofi:
  #bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -235,7 +254,6 @@ mode "resize" {
 }
 
 bindsym $mod+Shift+P mode "resize"
-# bindsym $mod+Shift+S exec slurp | grim -g - $(xdg-user-dir PICTURES/SCREENSHOTS)/$(date +'grim_%Y-%m-%d-%H%M%S.png')
 bindsym $mod+Shift+S exec slurp | grim -g - $(xdg-user-dir PICTURES)/Screenshots/$(date +'grim_%Y-%m-%d-%H%M%S.png')
 
 # Start i3bar to display a workspace bar (plus the system information i3status
@@ -261,11 +279,13 @@ bar {
                 # background #eb6f92
                 # statusline #eb6f92
                 # separator #eb6f92
-                background #000000
-                statusline #eeeeee
-                separator  #000000
+                background #ffee8c
+                statusline #000000
+                separator  #eeeeee
                 #                   border background text
-                focused_workspace  #000000 #eeeeee #000000
+                # This is the orange yellow
+                # focused_workspace  #f4800d #f4800d #000000
+                focused_workspace  #fff4bc #fff4bc #000000
                 active_workspace   #eeeeee #000000 #eeeeee
                 inactive_workspace #000000 #000000 #eeeeee
                 urgent_workspace   #2f343a #900000 #ffffff
@@ -273,18 +293,22 @@ bar {
         }
 }
 
-gaps inner 4
-gaps outer 8
-# hide_edge_borders smart
+gaps inner 0
+gaps outer 0
+hide_edge_borders smart
 smart_gaps off
 
 #<colorclass> <border> <background> <text> <indicator> <child_border>
-client.unfocused #111111 #111111  #a9a9a9  #ff8da1
+client.unfocused #112111 #111111  #a9a9a9  #ff8da1
 # liht
 # client.focused #eeeeee #eeeeee  #000000  #000000
 # dark
-client.focused #000000 #000000  #eeeeee  #eeeeee
+# client.focused #112111 #112111  #eeeeee  #eeeeee
+# yellow
 # client.focused #eebd35 #eebd35  #1d2021  #0efece
+# client.focused #cccccc #cccccc  #1d2021  #0efece
+# Eye pleasing orange
+client.focused #f4800d #f4800d  #1d2021  #0efece
 # client.focused #ff8da1 #ff8da1  #111111  #ff8da1
 #seat seat0 xcursor_theme Adwaita 30
 
@@ -312,6 +336,11 @@ exec swayidle -w \
          resume 'swaymsg "output * dpms on"' \
          before-sleep 'swaylock -f -c 000000'
 # output "*" bg #000000 solid_color
-# output "*" bg ~/Pictures/wallpapers/toman_mobius_fight.png fill
-# output "*" bg ~/Pictures/wallpapers/flower.jpg
-output "*" bg ~/Pictures/wallpapers/samuraigirl.png fill
+# output "*" bg ~/Pictures/wallpapers/flower.jpg fill
+output "*" bg ~/Pictures/wallpapers/blue_night.jpg fill
+# output "*" bg ~/Pictures/wallpapers/normalTown.jpg fill
+# output "*" bg ~/Pictures/wallpapers/blue_cloud.jpg fill
+# output "*" bg ~/Pictures/wallpapers/kick.jpg fill
+# output "*" bg ~/Pictures/wallpapers/yellow_flowers.jpg fill
+# output "*" bg ~/Pictures/wallpapers/yellow-car.jpg fill
+# output "*" bg ~/Pictures/wallpapers/samuraigirl.png fill
