--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -14,12 +14,13 @@ bind -n M-g display-popup -E "tmux new-session lf"
 
 # Enable RGB colour if running in xterm(1)
 
-set -g default-terminal "screen-256color"
-# set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",xterm-256color*:Tc"
-set -ga terminal-overrides ",rxvt-unicode-256color*:Tc"
-set -ga terminal-overrides ",foot*:Tc"
-set -ga terminal-overrides ",alacritty*:Tc"
+# set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+# set -ga terminal-overrides ",xterm-256color*:Tc"
+# set -ga terminal-overrides ",rxvt-unicode-256color*:Tc"
+set -gas terminal-overrides "*:Tc"
+set -gas terminal-overrides "*:RGB"
+# set -ga terminal-overrides ",alacritty*:Tc"
 # set-option -sa terminal-overrides ',alacritty:RGB'
 # set-option -sa terminal-overrides ',wezterm:RGB'
 # tell Tmux that outside terminal supports true color
@@ -28,7 +29,8 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 set -g base-index 1
 #setw -g pane-base-index 1
-source-file ~/.tmux/own.conf
+# source-file ~/.tmux/own.conf
+source-file ~/.tmux/spaceduck.conf
 # Undercurl
 set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
