--- a/dots/.config/gtk-3.0/settings.ini
+++ b/dots/.config/gtk-3.0/settings.ini
@@ -1,14 +1,16 @@
 [Settings]
 gtk-application-prefer-dark-theme=false
 gtk-button-images=true
+gtk-cursor-blink=true
+gtk-cursor-blink-time=1000
 gtk-cursor-theme-name=breeze_cursors
 gtk-cursor-theme-size=24
 gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
-gtk-font-name=Noto Sans,  10
-gtk-icon-theme-name=breeze
+gtk-font-name=Monaspace Neon,  11
+gtk-icon-theme-name=Fluent-yellow-light
 gtk-menu-images=true
 gtk-modules=colorreload-gtk-module
 gtk-primary-button-warps-slider=true
